--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div class="container">
+  <h4 class="m-4"><span style="background-color:#dddddd">ジャンル編集</span></h4>
+</div>
+<div class="container">
+  <%= form_with model: @genre, url:   admin_genre_path(@genre) do |f| %>
+  <div class="row pt-4 pb-4">
+    <div class="col-2 text-center ">
+      <%= f.label :name, "カテゴリー名" %>
+    </div>
+    <div class="col-3">
+      <%= f.text_field :name, class:'form-control' %>
+    </div>
+    <div class="col-3">
+      <%= f.submit '変更を保存', class: 'btn btn-success btn-block' %>
+      <% end %>
+    </div>
+  </div>
+ </div>
