--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,27 +1,42 @@
-<div class="row">
-
-  <div class="col-xs-3">
-    <%= form_with model: @genre, url: admin_genres_path do |f| %>
-
-      <%= f.label :name, 'カテゴリー名' %>
-      <br>
+<div class="container">
+  <h4 class="m-4"><span style="background-color:#dddddd">ジャンル一覧・追加</span></h4>
+</div>
+<div class="container">
+  <%= form_with model: @genre, url: admin_genres_path do |f| %>
+  <div class="row pt-4 pb-4">
+    <div class="col-2 text-center ">
+      <%= f.label :name, "カテゴリー名" %>
+    </div>
+    <div class="col-3">
       <%= f.text_field :name, class:'form-control' %>
-      <br>
-
-      <%= f.submit '追加', class: 'btn btn-primary btn-block' %>
+    </div>
+    <div class="col-3">
+      <%= f.submit '新規登録', class: 'btn btn-success btn-block' %>
       <% end %>
+    </div>
+  </div>
  </div>
- <div class="col-xs-9">
-
-
-        <% @genres.each do |genre| %>
-
-
-        <%= genre.name %>
-
-              <!--= link_to '編集', edit_category_path(category), class: 'btn-sm btn-primary'-->
-
-<% end %>
-
+ <div class="container">
+   <div class="row pt-4">
+     <div class="col-4">
+       <table class="table">
+         <thead class="thead table-secondary">
+           <tr>
+             <th>ジャンル</th>
+             <th colspan="3"></th>
+           </tr>
+         </thead>
+         <tbody>
+           <% @genres.each do |genre| %>
+             <tr>
+               <th><%= genre.name %></th>
+               <th><%= link_to '編集する', edit_admin_genre_path(genre), class: 'btn-sm btn-success' %></th>
+             </tr>
+           <% end %>
+        </tbody>
+       </table>
+     </div>
   </div>
 </div>
+
+<%= link_to "商品一覧" ,admin_items_path %>
