--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,10 +1,46 @@
-<%= link_to "商品一覧" ,admin_items_path %>
+<div class="container  m-4 mb-5">
+  <h4><span style="background-color:#dddddd">商品詳細</span></h4>
+</div>
+<div class="container">
+    <div class="row">
+      <div class="text-center col-sm-5">
+        <%= image_tag @item.get_image(350,350)%>
+      </div>
+      <div class="col-sm-7">
+        <table class="table table-borderless">
+          <tr>
+            <td class="w-25">商品名</td>
+            <td><%= @item.name %></td>
+          </tr>
+          <tr>
+            <td>商品説明</td>
+            <td><%= @item.explanation %></td>
+          </tr>
+          <tr>
+            <td>ジャンル</td>
+            <td><%= @item.genre.name %></td>
+          </tr>
+          <tr>
+            <td>税込価格<br>(税抜価格)</td>
+            <td><%= @item.add_tax_sales_price.to_s(:delimited) %> (<%= @item.price.to_s(:delimited) %>)円</td>
+          </tr>
+           <tr>
+            <td>販売ステータス</td>
+            <td>
+              <% if @item.is_ordered %>
+                <div class='text-success'>販売中</div>
+              <% else %>
+                <div class="text-secondary">販売停止中</div>
+              <% end %>
+            </td>
+          </tr>
 
-<%= image_tag @item.get_image(300,300)%>
-<%= @item.name %>
-<%= @item.explanation %>
-<%= @item.add_tax_sales_price.to_s(:dalimited) %>
-<%= @item.price %>
-<%= @item.genre.name %>
-<%= @item.is_ordered ? "販売中" : "販売停止中" %>
-<%= link_to "編集", edit_admin_item_path(@item) %>
+        </table>
+        <div><%= link_to "編集する", edit_admin_item_path(@item) ,class: "btn btn-success " %></div>
+      </div>
+    </div>
+ </div>
+
+
+
+<%= link_to "商品一覧" ,admin_items_path %>
