--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -9,3 +9,4 @@
 <%= link_to "会員ログイン" ,  new_customer_session_path %><br>
 
 <%= link_to "ログアウト" ,  destroy_customer_session_path , method: :delete%><br>
+<%= link_to "商品一覧",   public_items_path %>
