--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,7 +1,47 @@
+<h2 class="mt-3 text-center">ショッピングカート</h2>
+<div class="container">
+  <div class="row">
+    <div class="ml-auto">
+    <%= link_to "全て削除" , public_all_destroy_path, method: :delete, data: {confirm: "本当に消しますか？"} %>
+    </div>
+  </div>
 
-<%= image_tag @cart_items.item.get_image(350,350)%>
-<%= @cart_items.item.name %>
-<%= @cart_items.item.add_tax_sales_price.to_s(:delimited) %>
-<%= @cart_items.amount %>
+  <div class="row">
+    <table class="col-md-12 table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+<% @cart_items.each do |cart_item| %>
+<tr>
 
-¥<%= @total.round.to_s(:delimited)%>
+<td><%= image_tag cart_item.item.get_image(200,200)%></td>
+<td><%= cart_item.item.name %></td>
+
+<td><%= cart_item.amount %></td>
+<%= form_with model: cart_item, url: public_cart_item_path(cart_item)  do |f| %>
+    <%= f.hidden_field :item_id, value: cart_item.item.id %>
+    <td><%= f.number_field :amount ,value: cart_item.amount%></td>
+    <td><%= f.submit "更新", class: "" %></td>
+<% end %>
+
+<td><%= (cart_item.item.price * 1.1).floor %></td>
+<td><%= (cart_item.item.price * 1.1).floor * cart_item.amount %></td>
+<td><%= link_to "削除" , public_cart_item_path(cart_item), method: :delete, data: {confirm: "本当に消しますか？"} %></td>
+<% end %>
+
+ </tr>
+  </tbody>
+    </table>
+  </div>
+       ¥<%= @total.round.to_s(:delimited)%>
+<%# @合計金額 +=  (cart_item.price * 1.1).floor * cart_item.amount %>
+<%= link_to "買い物を続ける",   public_items_path %>
+
+
