--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -7,5 +7,6 @@
  <%= form_with model: @cart_item, url: public_cart_items_path  do |f| %>
  <%= f.hidden_field :item_id, value: @item.id %>
  <%= f.hidden_field :customer_id, :value => current_customer.id %>
- <%= f.select :quantity,[1,2,3,4,5,6,7,8,9,10],{include_blank: '個数選択'},required:true%>&emsp;
+ <%= f.select :amount,[1,2,3,4,5,6,7,8,9,10],{include_blank: '個数選択'},required:true%>&emsp;
  <%= f.submit 'カートに入れる' ,class: 'btn btn-success btn-sm'%><% end %>
+ <%= link_to "カートに戻る",   public_cart_items_path %>
