--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -42,6 +42,6 @@
   </div>
        ¥<%= @total.round.to_s(:delimited)%>
 <%# @合計金額 +=  (cart_item.price * 1.1).floor * cart_item.amount %>
-<%= link_to "買い物を続ける",   public_items_path %>
-
+<%= link_to "買い物を続ける",   public_items_path %><br>
+<%= link_to "情報入力に進む",   new_public_order_path %>
 
