--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -11,3 +11,5 @@
 <%= link_to "ログアウト" ,  destroy_customer_session_path , method: :delete%><br>
 <%= link_to "商品一覧",   public_items_path %><br>
 <%= link_to "配送先一覧",  public_addresses_path %><br>
+<%= link_to "注文一覧", public_orders_path %><br>
+<%= link_to "アドミン注文一覧",   admin_orders_path %><br>
